fix: chrome background color on dark mode focus

--- a/packages/components/src/components/text-field/text-field.css
+++ b/packages/components/src/components/text-field/text-field.css
@@ -297,3 +297,11 @@ input[type='month']::-webkit-calendar-picker-indicator {
   position: absolute;
   right: 12px;
 }
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    color-scheme: dark;
+}
